Update Main.java
Part 2 method that classifies each hand into an integer type, sorts hands by type and then by descending card values (for tiebreakers), assigns ranks from weakest to strongest, and calculates the total bid value as “rank × bid” for all hands.